k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcd-service
  labels:
    app: vcd
spec:
  selector:
    app: vcd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
